[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://TicTacButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://RoomCode.gd" type="Script" id=3]

[node name="Main" type="Control"]
margin_left = -2.37836
margin_top = 49.9467
margin_right = 597.622
margin_bottom = 649.947
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopHorizontal" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 216.65
margin_right = 550.0
margin_bottom = 226.65
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomHorizontal" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 383.0
margin_right = 550.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftVertical" type="ColorRect" parent="."]
margin_left = 216.65
margin_top = 50.0
margin_right = 716.65
margin_bottom = 60.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightVertical" type="ColorRect" parent="."]
margin_left = 383.3
margin_top = 50.0
margin_right = 883.3
margin_bottom = 60.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TicTacButton1" parent="." instance=ExtResource( 2 )]
margin_left = 62.1579
margin_top = 66.1579
margin_right = 190.158
margin_bottom = 194.158
texture_hover = null
row = 0
col = 0

[node name="TicTacButton2" parent="." instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 65.0
margin_right = 358.0
margin_bottom = 193.0
texture_hover = null
row = 0
col = 1

[node name="TicTacButton3" parent="." instance=ExtResource( 2 )]
margin_left = 405.0
margin_top = 62.0
margin_right = 533.0
margin_bottom = 190.0
texture_hover = null
row = 0
col = 2

[node name="TicTacButton4" parent="." instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 238.0
margin_right = 194.0
margin_bottom = 366.0
texture_hover = null
row = 1
col = 0

[node name="TicTacButton5" parent="." instance=ExtResource( 2 )]
margin_left = 233.0
margin_top = 236.0
margin_right = 361.0
margin_bottom = 364.0
texture_hover = null
row = 1
col = 1

[node name="TicTacButton6" parent="." instance=ExtResource( 2 )]
margin_left = 400.0
margin_top = 236.0
margin_right = 528.0
margin_bottom = 364.0
texture_hover = null
row = 1
col = 2

[node name="TicTacButton7" parent="." instance=ExtResource( 2 )]
margin_left = 62.0
margin_top = 408.0
margin_right = 190.0
margin_bottom = 536.0
texture_hover = null
row = 2
col = 0

[node name="TicTacButton8" parent="." instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 405.0
margin_right = 359.0
margin_bottom = 533.0
texture_hover = null
row = 2
col = 1

[node name="TicTacButton9" parent="." instance=ExtResource( 2 )]
margin_left = 403.0
margin_top = 408.0
margin_right = 531.0
margin_bottom = 536.0
texture_hover = null
row = 2
col = 2

[node name="WinDialog" type="ConfirmationDialog" parent="."]
margin_left = 197.0
margin_top = 243.0
margin_right = 397.0
margin_bottom = 313.0
popup_exclusive = true
window_title = "Someone Won!"
dialog_text = "Someone Won!!!"

[node name="Tween" type="Tween" parent="."]

[node name="RoomCode" type="Label" parent="."]
margin_left = 258.866
margin_top = 0.0546265
margin_right = 389.866
margin_bottom = 40.0546
text = "PRUEBA"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="WinDialog" to="." method="onPlayAgain"]
